# agentpod

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  SPEC.md  agent.go  agentPodMessage.go  agent_test.go  conversationContext.go  conversation_context.go  cost.go  errors.go  go.mod  llmClient.go  llmInterface.go  llmMessage.go  llm_client.go  llm_interface.go  llm_message.go  memory.go  memory_test.go  mypy.ini  pod.go  prompts.go  pyproject.toml  response.go  session.go  skill.go  skillContextRunner.go  skill_context_runner.go  state.go  storage.go  storage_sqlite.go  storage_sqlite_test.go  tool.go
.github/workflows/: release.yml
agent/: agent.go  prompts.go  skill.go  tool.go
agentMessage/: agentPodMessage.go
agentpod/: __init__.py  agent.go  errors.go  memory.go  message.go  pod.go  session.go  skill.go  tool.go
agentpod/client/: __init__.py  client.py
agentpod/client/structured/: LICENSE  __init__.py  custom_async_openai.py  function_calls.py  patch.py  process_response.py  retry.py  utils.py
agentpod/client/structured/dsl/: iterable.py  parallel.py  partial.py  simple_type.py  validators.py
agentpod/http/: client.py  retry_transport.py
agentpod/llm/: __init__.py  llm.py
agentpod/session/: errors.go  messages.go  runner.go  session.go  state.go
agentpod/tools/: __init__.py  bing.py  brave.py
agentpod/tools/brave/: async_brave.py  client.py  sync.py
agentpod/tools/brave/types/web/: search_result.py
agentpod/utils/: __init__.py  contentizer.py  file_cache.py  tracker.py  utils.py
cmd/agentpod/: README.md  main.go
dashboard/: server.go
examples/: product-color-find.ipynb
internal/: util.go
llm/: errors.go  llm.go  llmClient.go  llmMessage.go
memory/: memory.go
prompts/: prompts.go  skillContextRunner.go  skillSelection.go  skill_contextRunner.go  skill_selection.go
tests/: basic_test.go  config.go  multiagent_test.go  response_test.go  simple_conversation_test.go  task_oriented_test.go  test_contentizer.py  test_llm.py  test_output_type.py  test_search.py  test_simple.py  test_vision.py
