[tool.poetry]
name = "agentpod"
version = "0.1.0"
description = "A simple framework for agentic systems"
authors = ["Boat Builder <hello@boatbuilder.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://agentpod.ai"
repository = "https://github.com/boat-builder/agentpod"
documentation = "https://github.com/boat-builder/agentpod"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.11"
brave-search = "^0.2.0"
loguru = "^0.7.2"
openai = "^1.32.0"
instructor = "^1.3.2"
pydantic = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
