[tool.poetry]
name = "agentpod"
version = "0.1.0"
description = "A simple framework for agentic systems"
authors = ["Boat Builder <hello@boatbuilder.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://agentpod.ai"
repository = "https://github.com/boat-builder/agentpod"
documentation = "https://github.com/boat-builder/agentpod"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
openai = "^1.32.0"
pydantic = "^2.7.3"
tenacity = "^8.3.0"
docstring-parser = "^0.16"
requests = "^2.32.3"
bs4 = "^0.0.2"
numpy = "<2.0.0"
azure-cognitiveservices-search-websearch = "^2.0.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
